--- a/source/partials/_footer.haml
+++ b/source/partials/_footer.haml
@@ -25,7 +25,7 @@
           .row.spacer30
           .row
             .col-md-8.col-md-offset-2
-              %p.text-center Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren.
+              %p.text-center We will NEVER spam/sell/trade your personal information.
           .row.spacer10
           .row
             .col-xs-12.text-center
@@ -40,7 +40,7 @@
       %i.fa.fa-angle-up
   .container
     .row
-      .col-xs-12.col-sm-4.col-md-4
+      .col-xs-12.col-sm-6.col-md-6
         %h4 KEEP IN TOUCH
         .footer-socials
           %a{:href => "#"}
@@ -51,21 +51,17 @@
             %i.fa.fa-twitter
           %a{:href => "#"}
             %i.fa.fa-pinterest
-      .col-xs-12.col-sm-4.col-md-4
+      .col-xs-12.col-sm-6.col-md-6
         %h4 ADDRESS
         %p
-          643 Newcastle St
+          Via Livorno 60 
           %br/
-          Leederville WA 6007, Australia
+          10144 Torino
         %p
-          +1 888-587-8421
+          +39 011 225 7321
           %br/
-          %a{:href => "#"} www.domain.com
+          %a{:href => "#"} www.nubiloom.com
           %br/
-          info@domain.com
-      .col-xs-12.col-sm-4.col-md-4
-        %h4 SUPPORT
-        %p You need support? Visit our support forum and open tickets for you questions.
-        %p
-          %button.btn.btn-primary{:type => "button"} forum
+          info@nubiloom.com
+
   .spacer100
