--- a/source/partials/_home.haml
+++ b/source/partials/_home.haml
@@ -2,7 +2,7 @@
   .container
     .row
       .col-md-8.col-md-offset-2
-        %h2.section-title 
+        %h2.section-title.vision 
           We leverage all the power of cloud computing today, not tomorrow,
           whatever our client is a startup or an enterprise. From determining the
           business case for moving to AWS, to designing, deploying and managing
