--- a/source/partials/_parallax.haml
+++ b/source/partials/_parallax.haml
@@ -4,5 +4,5 @@
       .container
         .row
           .col-md-8.col-md-offset-2
-            %p "What the new technology does is create new opportunities to do a job that customers want done."
-            %p "Tim O'Reilly"
+            %p.quote "What the new technology does is create new opportunities to do a job that customers want done."
+            %p.author Tim O'Reilly
