--- a/source/partials/_showcase.haml
+++ b/source/partials/_showcase.haml
@@ -1,106 +1,25 @@
 %section#showcase
   .container
     .row
-      .col-md-12.text-center
-        %h2.section-title showcase
-    .row.spacer40
-    .row
-      .col-md-6.col-sm-6
-        %h3.big Specialization
-        %p Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-        %p Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.
-        %p
-          %button.btn.btn-primary.btn-lg{:type => "button"} Presentation
-      .col-md-6.col-sm-6.skill-shortcode
-        %h3.big Skills
-        .skill
-          %p Web Design
-          .progress
-            .progress-bar{"data-percentage" => "60", :role => "progressbar"}
-              %span.progress-bar-span 60%
-              %span.sr-only 60% Complete
-        .skill
-          %p Wordpress
-          .progress
-            .progress-bar{"data-percentage" => "80", :role => "progressbar"}
-              %span.progress-bar-span 80%
-              %span.sr-only 60% Complete
-        .skill
-          %p CSS 3
-          .progress
-            .progress-bar{"data-percentage" => "90", :role => "progressbar"}
-              %span.progress-bar-span 90%
-              %span.sr-only 60% Complete
-        .skill
-          %p HTML 5
-          .progress
-            .progress-bar{"data-percentage" => "100", :role => "progressbar"}
-              %span.progress-bar-span 100%
-              %span.sr-only 60% Complete
-    .row.spacer60
-    .row
       .col-md-12
-        %h3.big Boxed Project Style
+        %h3.big Projects
     .row
       .col-xs-6.col-sm-3.col-md-3
         .project-boxed
           .media-content
-            %img{:alt => "", :src => "img/project-boxed/1.jpg"}/
+            %img{:alt => "contestgram", :src => "img/project-boxed/contestgram.png"}/
           .media-text
-            %a{:href => ""}/
-            %h4 boxed project style
-            %h5 Photography
+            %a{:href => "http://contestgram.com/"}/
+            %h4 Contestgram
+            %h5 Mobile app
       .col-xs-6.col-sm-3.col-md-3
         .project-boxed
           .media-content
-            %img{:alt => "", :src => "img/project-boxed/2.jpg"}/
+            %img{:alt => "letlife", :src => "img/project-boxed/letlife.png"}/
           .media-text
-            %a{:href => ""}/
-            %h4 boxed project style
-            %h5 Photography
-      .col-xs-6.col-sm-3.col-md-3
-        .project-boxed
-          .media-content
-            %img{:alt => "", :src => "img/project-boxed/3.jpg"}/
-          .media-text
-            %a{:href => ""}/
-            %h4 boxed project style
-            %h5 Photography
-      .col-xs-6.col-sm-3.col-md-3
-        .project-boxed
-          .media-content
-            %img{:alt => "", :src => "img/project-boxed/4.jpg"}/
-          .media-text
-            %a{:href => ""}/
-            %h4 boxed project style
-            %h5 Photography
+            %a{:href => "http://let.life"}/
+            %h4 Letlife
+            %h5 Mobile + Web App
+
     .row.spacer80
-    .row
-      .col-md-5.col-sm-5
-        .spacer30
-        %h3.big New Application
-        %p Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named. Separated they live in Bookmarksgrove right at the coast of the Semantics. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named. Separated they live in Bookmarksgrove right at the coast of the Semantics..
-        %p
-          %button.btn.btn-primary{:type => "button"} More
-      .col-md-7.col-sm-7
-        .laptop
-          %img{:alt => "", :src => "img/slider-laptop/laptop.png"}/
-          .laptop-slider
-            %ul.slides
-              %li
-                %img{:alt => "", :src => "img/slider-laptop/1.jpg"}/
-              %li
-                %img{:alt => "", :src => "img/slider-laptop/2.jpg"}/
-              %li
-                %img{:alt => "", :src => "img/slider-laptop/3.jpg"}/
-    .row.spacer100
-  %iframe.google-map{:src => "https://maps.google.sk/maps/ms?msa=0&amp;msid=210946297010027755543.0004c74af772bb9276d33&amp;ie=UTF8&amp;ll=48.576981,19.13117&amp;spn=0,0&amp;t=m&amp;output=embed"}
-  .hero-unit
-    .container
-      .row
-        .col-md-12
-          .div-table
-            .div-table-cell
-              .hero-text No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those.
-            .div-table-cell
-              %button.btn.btn-lg.hero-unit-button Purchase
+    
