--- a/source/localizable/index.html.haml
+++ b/source/localizable/index.html.haml
@@ -5,4 +5,5 @@
 = partial "partials/services"
 = partial "partials/parallax"
 = partial "partials/showcase"
+= partial "partials/twitter"
 = partial "partials/footer"
