--- a/source/partials/_service-gallery.haml
+++ b/source/partials/_service-gallery.haml
@@ -5,7 +5,7 @@
         %h2.section-title MAIN SERVICES
     .row
       .col-md-12
-        %p.lead 
+        %p.lead.work
           We work with medium, big business and enterprises who need to undestand ,evaluate and integrate the new cloud technology.
     .row
       .col-md-12
@@ -14,20 +14,20 @@
             %ul.slides
               %li
                 .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    = image_tag "icons/icon_amazoncloud.svg"
+                  //%a{:href => "#"}
+                  = image_tag "icons/icon_amazoncloud.svg"
                   .slider-text
                     %h3 Amazon Web Services
                     %p Arguably the market leader. We offer experienced consultancy in all the aspects of the AWS. Our certificates prove our knowledge and dedication.
                 .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    = image_tag "icons/icon_internet.svg"
+                  //%a{:href => "#"}
+                  = image_tag "icons/icon_internet.svg"
                   .slider-text
                     %h3 Virtual Internet Service Provider 
                     %p We offers dialup Internet connectivity and related services to companies of all sizes, tailor-making the dialup offer and customise it to suit any subscriber.
                 .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    = image_tag "icons/icon_dev.svg"
+                  //%a{:href => "#"}
+                  = image_tag "icons/icon_dev.svg"
                   .slider-text
                     %h3 Backend and App Development 
                     %p  For every server based apps a backend development is required, establishing the logic and the data base schemas, APIs your app will use.
