--- a/source/partials/_about.haml
+++ b/source/partials/_about.haml
@@ -38,7 +38,7 @@
           You can change direction without serious “people” or “financial” issues at stake.
 
     .row.spacer80
-  #parallax-one.parallax{:style => "background-image:url(img/parallax/back.png);"}
+  #parallax-one.parallax
     .parallax-text-container-1
       .parallax-text-item
         .container
