--- a/source/partials/_header-parallax.haml
+++ b/source/partials/_header-parallax.haml
@@ -1,6 +1,6 @@
 %header#header
   / parallax home
-  #parallax-home.parallax{:style => "background-image:url(img/slider-main/header.png);"}
+  #parallax-home.parallax
     .container
       .row
         .col-md-12
@@ -29,17 +29,18 @@
           %li
             %a{:href => "#home", :title => "Home"} Home
           %li
-            %a{:href => "#services", :title => "Services"} Advantages
+            %a{:href => "#about", :title => "Cloud Advantages"} Advantages
           %li
-            %a{:href => "#about", :title => "About"} Offer
+            %a{:href => "#main-services", :title => "Offering"} Offering
           %li
-            %a{:href => "#team", :title => "Team"} Technologies
+            %a{:href => "#services", :title => "Services"} Services
           %li
-            %a{:href => "#job", :title => "Job"} Clients 
+            %a{:href => "#showcase", :title => "Projects"} Projects
           %li
-            %a{:href => "#showcase", :title => "Showcase"} News
+            %a{:href => "#parallax-three", :title => "Twitter"} Twitter Stream 
           %li
-            %a{:href => "#contact", :title => "Contact"} Contact
+            %a{:href => "#contact", :title => "Contacts"} Contact
+
         %select.select-menu
         / select menu for small screens
   / Nav ends
