--- a/source/partials/_parallax.haml
+++ b/source/partials/_parallax.haml
@@ -1,4 +1,4 @@
-#parallax-two.parallax{:style => "background-image:url(img/parallax/back2.png);"}
+#parallax-two.parallax
   .parallax-text-container-2
     .parallax-text-item
       .container
