--- a/source/partials/_service-gallery.haml
+++ b/source/partials/_service-gallery.haml
@@ -1,8 +1,8 @@
-%section
+%section#main-services
   .container
     .row.spacer80
       .col-md-12.text-center
-        %h2.section-title MAIN SERVICES
+        %h2.section-title Offering
     .row
       .col-md-12
         %p.lead.work
