--- a/source/partials/_showcase.haml
+++ b/source/partials/_showcase.haml
@@ -5,21 +5,23 @@
         %h3.big Projects
     .row
       .col-xs-6.col-sm-3.col-md-3
-        .project-boxed
-          .media-content
-            %img{:alt => "contestgram", :src => "img/project-boxed/contestgram.png"}/
-          .media-text
-            %a{:href => "http://contestgram.com/"}/
-            %h4 Contestgram
-            %h5 Mobile app
+        %a{:href => "http://contestgram.com/"}
+          .project-boxed
+            .media-content
+              %img{:alt => "contestgram", :src => "img/project-boxed/contestgram.png"}/
+            .media-text
+              
+              %h4 Contestgram
+              %h5 Mobile app
       .col-xs-6.col-sm-3.col-md-3
-        .project-boxed
-          .media-content
-            %img{:alt => "letlife", :src => "img/project-boxed/letlife.png"}/
-          .media-text
-            %a{:href => "http://let.life"}/
-            %h4 Letlife
-            %h5 Mobile + Web App
+        %a{:href => "http://let.life"}
+          .project-boxed
+            .media-content
+              %img{:alt => "letlife", :src => "img/project-boxed/letlife.png"}/
+            .media-text
+              
+              %h4 Letlife
+              %h5 Mobile + Web App
 
     .row.spacer80
     
