--- a/source/partials/_twitter.haml
+++ b/source/partials/_twitter.haml
@@ -1,22 +1,34 @@
-#parallax-three.parallax{:style => "background-image:url(img/parallax/back.png);"}
+#parallax-four.parallax
   .parallax-text-container-2
     .parallax-text-item
       .container
         .row
           .col-md-12.col-sm-12
-            %h2.interval Twitter streaming
+            %h2.interval Twitter Stream
           .col-md-4.col-sm-12
             #hash-list
               %ul
-                %li.aws
+                %li.aws{"data-type"=>"fadeIn"}
                   %a{:href=>"#"}
                     \#aws
-                %li.cloud
+                %li.cloud{"data-type"=>"fadeIn"}
                   %a{:href=>"#"}
                     \#cloud
-                %li
+                %li.awsstartups{"data-type"=>"fadeIn"}
                   %a{:href=>"#"}
-                    \#cloudcomputing
+                    \#awsstratups
+                %li.awsactivate{"data-type"=>"fadeIn"}
+                  %a{:href=>"#"}
+                    \#awsactivate
+                %li.reinvent{"data-type"=>"fadeIn"}
+                  %a{:href=>"#"}
+                    \#reinvent
+                %li.nodejs{"data-type"=>"fadeIn"}
+                  %a{:href=>"#"}
+                    \#nodejs
+                %li.mongodb{"data-type"=>"fadeIn"}
+                  %a{:href=>"#"}
+                    \#mongodb
           .col-md-8.col-sm-12
             #twitter.twitter
             
