--- a/source/layouts/html5.haml
+++ b/source/layouts/html5.haml
@@ -13,7 +13,7 @@ metas: "main"
   %head
     / Basic Meta Tags
     %meta{:charset => "utf-8"}/
-    %title OVNI - one page responsive template
+    %title Nubiloom
     %meta{:content => "your description", :name => "description"}/
     %meta{:content => "your keywords", :name => "keywords"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
@@ -45,6 +45,18 @@ metas: "main"
     %script{:src => "js/modernizr.js"}
     %script{:src => "js/twitterFetcher.js"}
   %body
+
+
+    %noscript
+      %iframe{:height => "0", :src => "//www.googletagmanager.com/ns.html?id=GTM-NJ6WDS", :style => "display:none;visibility:hidden", :width => "0"}
+    :javascript
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-NJ6WDS');
+
+
     = yield
 
     / Footer ends
