--- a/source/css/_responsive.sass
+++ b/source/css/_responsive.sass
@@ -1,4 +1,6 @@
 @media (max-width: 768px)
+  .ls-l
+    display: none
   .navbar .nav
     display: none !important
   .parallax .parallax-text-container-home
@@ -17,7 +19,7 @@
     right: 15px
     display: block
     float: left
-    width: 70%
+    width: 30%
     min-width: 120px
     height: 30px
     font-family: 'Open Sans', sans-serif
@@ -32,6 +34,7 @@
     margin-bottom: 30px
 
 @media (max-width: 560px)
+
   section, footer
     padding-top: 75px
   .main-slider h1, .main-slider-video h1
@@ -41,7 +44,7 @@
   .main-slider .flex-direction-nav a, .projects-slider .flex-control-paging li a, .testimonal-slider .flex-control-paging li a
     width: 50px !important
   .select-menu
-    width: 70%
+    width: 30%
   .logo-cell
     display: inline-block
     vertical-align: middle
@@ -54,7 +57,7 @@
 
 @media (max-width: 460px)
   .select-menu
-    width: 50%
+    width: 30%
   .projects-slider [class*="col-"]
     width: 100%
   .slider-content
