--- a/source/css/style.sass
+++ b/source/css/style.sass
@@ -5,7 +5,7 @@
 @import flexslider
 @import magnific-popup
 @import YTPlayer
-@import responsive
+
 
 $cadet: #516570
 $valencia: #E25550
@@ -701,7 +701,7 @@ img
 .parallax-mobile
   background-position: 50% 0px !important
   background-attachment: scroll !important
-
+  background-size: 1650px
 .parallax-colored
   background-color: rgba(53, 84, 117, 0.7)
 
@@ -1717,3 +1717,5 @@ ul.rs-slider
 
 .clear
   clear: both
+
+@import responsive
