--- a/source/partials/_twitter.haml
+++ b/source/partials/_twitter.haml
@@ -5,7 +5,7 @@
         .row
           .col-md-12.col-sm-12
             %h2.interval Twitter Stream
-          .col-md-4.col-sm-12
+          .col-md-4.col-sm-5.col-xs-12
             #hash-list
               %ul
                 %li.aws{"data-type"=>"fadeIn"}
@@ -29,7 +29,7 @@
                 %li.mongodb{"data-type"=>"fadeIn"}
                   %a{:href=>"#"}
                     \#mongodb
-          .col-md-8.col-sm-12
+          .col-md-8.col-sm-7.col-xs-12
             #twitter.twitter
             
 
