--- a/source/css/style.sass
+++ b/source/css/style.sass
@@ -57,6 +57,8 @@ h2.interval
 .twitter
   ul
     list-style-type: none
+    margin: 0
+    padding: 0 
   text-align: left
   .tweet
     padding-top: 5px
